# meteofrance-hackathon-2025-enr

./: .gitignore  README.MD
data/catalogs/: RCM.csv
frontend/: README.md  index.html  package-lock.json
frontend/dep/: shadertiledlayer-1.0.0.tgz
frontend/public/tilesets/CMCC/dju_01/: index.json
frontend/public/tilesets/CMCC/dju_02/: index.json
frontend/public/tilesets/CMCC/dju_03/: index.json
frontend/public/tilesets/CMCC/dju_04/: index.json
frontend/public/tilesets/CMCC/dju_05/: index.json
frontend/public/tilesets/CMCC/dju_06/: index.json
frontend/src/: App.css  App.tsx  store.ts  tools.ts
frontend/src/components/InfoDrawerContent/: index.tsx  style.module.css
frontend/src/components/MenuIndicators/: index.tsx
frontend/src/components/MenuModels/: index.tsx
frontend/src/components/MlMap/: index.tsx
frontend/src/components/MonthSlider/: index.tsx  style.module.css
frontend/src/components/SideMenu/: index.tsx  style.module.css
frontend/src/components/TraccSlider/: index.tsx  style.module.css
notebooks/: Hackthon-climat
tiling/: to-web-mercator.py
tool-kit/: README.md  setup.py
tool-kit/src/: downloader.py  main.py
toolkit/: README.md  main.py  pyproject.toml
toolkit/src/mf_toolkit/climato/: __init__.py  xarray_accesor.py
toolkit/src/mf_toolkit/climato/indicators/: __init__.py  base.py  energy.py  solar.py  temperature.py  wind.py
toolkit/src/mf_toolkit/data/: __init__.py  config.py  downloader.py  export.py  search.py
toolkit/src/mf_toolkit/tiling/: __init__.py  to_web_mercator.py
(+18 files in other folders)
